bin/tests/errors/sema/sema_err_bad_slice_element_type.swg
#global fileprivate

var B: [..] void // swc-expected-error {{sema_err_bad_slice_element_type}}
